--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,9 @@ plugins {
     id 'java-library'
 }
 
+group 'qa.guru'
+version '1.0-SNAPSHOT'
+
 repositories {
     mavenCentral()
 }
@@ -11,6 +14,7 @@ dependencies {
             "com.codeborne:selenide:5.25.0",
             "org.junit.jupiter:junit-jupiter-api:5.8.1")
     testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.8.1"
+    testRuntimeOnly("org.slf4j:slf4j-simple:1.7.30")
 }
 
 tasks.withType(JavaCompile) {
